HMSS-99: Implement patient health comment endpoints (#7)
